--- a/axelor-auth/src/main/resources/i18n/fr.csv
+++ b/axelor-auth/src/main/resources/i18n/fr.csv
@@ -16,6 +16,7 @@
 "com.axelor.auth.db.Permission","canWrite","field","Write","Modification",,
 "com.axelor.auth.db.Permission","canCreate","field","Create","Création",,
 "com.axelor.auth.db.Permission","canRemove","field","Remove","Suppression",,
+"com.axelor.auth.db.Permission","canExport","field","Export","Export",,
 "com.axelor.auth.db.Permission","readCondition","field",,"Condition",,
 "com.axelor.auth.db.Permission","readParams","field",,"Paramètres",,
 "com.axelor.auth.db.Permission","writeCondition","field",,"Condition",,
@@ -24,6 +25,8 @@
 "com.axelor.auth.db.Permission","createParams","field",,"Paramètres",,
 "com.axelor.auth.db.Permission","removeCondition","field",,"Condition",,
 "com.axelor.auth.db.Permission","removeParams","field",,"Paramètres",,
+"com.axelor.auth.db.Permission","exportCondition","field",,"Condition",,
+"com.axelor.auth.db.Permission","exportParams","field",,"Paramètres",,
 "com.axelor.auth.db.Role","name","field",,"Nom",,
 "com.axelor.auth.db.Role","description","field",,"Description",,
 "com.axelor.auth.db.Role","users","field",,"Utilisateurs",,
@@ -58,6 +61,9 @@
 "com.axelor.auth.db.Permission",,"group","Remove","Suppression",,
 "com.axelor.auth.db.Permission",,"viewField","Condition","Conditon",,
 "com.axelor.auth.db.Permission",,"viewField","Params","Parametres",,
+"com.axelor.auth.db.Permission",,"group","Export","Export",,
+"com.axelor.auth.db.Permission",,"viewField","Condition","Conditon",,
+"com.axelor.auth.db.Permission",,"viewField","Params","Parametres",,
 "com.axelor.auth.db.Permission",,"view","Permissions","Permissions",,
 "com.axelor.auth.db.Role",,"view","Role","Role",,
 "com.axelor.auth.db.Group",,"view","Groups","Groupes",,
@@ -65,7 +71,13 @@
 "com.axelor.auth.db.Role",,"view","Roles","Roles",,
 "com.axelor.auth.db.User",,"view","User","Utilisateurs",,
 "com.axelor.auth.db.User",,"group","General Info","Informations général",,
-"com.axelor.auth.db.User",,"group","Login","Identifiant",,
+"com.axelor.auth.db.User",,"placeholder","user name","nom",,
+"com.axelor.auth.db.User",,"placeholder","user group","groupe",,
+"com.axelor.auth.db.User",,"placeholder","login name","login",,
+"com.axelor.auth.db.User",,"viewField","Change password?","Changer mot de passe ?",,
+"com.axelor.auth.db.User",,"viewField","Password","Mot de passe",,
+"com.axelor.auth.db.User",,"placeholder","new password","nouveau",,
+"com.axelor.auth.db.User",,"placeholder","confirm password","confirmation",,
 "com.axelor.auth.db.User",,"group","Authorization","Autorisation",,
 "com.axelor.auth.db.User",,"view","Users","Utilisateurs",,
 ,,"action","Groups","Groupes",,
@@ -74,19 +86,31 @@
 ,,"action","Users","Utilisateurs",,
 ,,"action","Code length should be greater than 2.","La longueur de l'identifiant doit être supérieur à 2",,
 ,,"action","Name length should be greater than 2.","La longueur du nom doit être supérieur à 2",,
-,,"action","Permissions","Permissions",,
-,,"action","Password length should be greater than 4.","La longueur du mot de passe doit être supérieur à 4",,
 ,,"action","Code length should be greater than 2.","La longueur de l'identifiant doit être supérieur à 2",,
 ,,"action","Name length should be greater than 2.","La longueur du nom doit être supérieur à 2",,
+,,"action","Permissions","Permissions",,
+,,"action","Not a valid object name.","Nom de l'objet non valide.",,
 "axelor-auth",,"other","Duplicates found:","Doublons trouvés:",,
 "axelor-auth",,"other","Not a valid object.","Objet non valide.",,
 "axelor-auth",,"other","Object found:","Objet trouvés:",,
-"axelor-auth",,"other","Password doesn't match","Le mot de passe ne correspond pas",,
 "axelor-auth",,"other","Only one permission per object is required.","Une seule permission par objet est requise.",,
-"role-form","name","documentation",,,,
-"role-form","groups","documentation",,,,
-"role-form","users","documentation",,,,
-"role-form","description","documentation",,,,
+"axelor-auth",,"other","Password doesn't match","Le mot de passe ne correspond pas",,
+"action-auth-users","action-auth-users","documentation",,,,
+"action-auth-groups","action-auth-groups","documentation",,,,
+"action-auth-roles","action-auth-roles","documentation",,,,
+"action-auth-permissions","action-auth-permissions","documentation",,,,
+"user-form","user-form","documentation",,,,
+"user-form","name","documentation",,,,
+"user-form","group","documentation",,,,
+"user-form","code","documentation",,,,
+"user-form","change","documentation",,,,
+"user-form","newPassword","documentation",,,,
+"user-form","confirm","documentation",,,,
+"user-form","blocked","documentation",,,,"Bloque l'utilisateur pour une période indéterminée."
+"user-form","activeFrom","documentation",,,,"Autorise l'utilisateur à partir d'une date précise."
+"user-form","activeTo","documentation",,,,"Autorise l'utilisateur jusqu'une date précise."
+"user-form","roles","documentation",,,,
+"group-form","group-form","documentation",,,,
 "group-form","showPermissions","documentation",,,,
 "group-form","name","documentation",,,,
 "group-form","code","documentation",,,,
@@ -94,12 +118,19 @@
 "group-form","restricted","documentation",,,,
 "group-form","permissions","documentation",,,,
 "group-form","roles","documentation",,,,
+"role-form","role-form","documentation",,,,
+"role-form","name","documentation",,,,
+"role-form","groups","documentation",,,,
+"role-form","users","documentation",,,,
+"role-form","description","documentation",,,,
+"permission-form","permission-form","documentation",,,,
 "permission-form","name","documentation",,,,
 "permission-form","object","documentation",,,,
 "permission-form","canRead","documentation",,,,
 "permission-form","canWrite","documentation",,,,
 "permission-form","canCreate","documentation",,,,
 "permission-form","canRemove","documentation",,,,
+"permission-form","canExport","documentation",,,,
 "permission-form","readCondition","documentation",,,,
 "permission-form","readParams","documentation",,,,
 "permission-form","writeCondition","documentation",,,,
@@ -108,11 +139,5 @@
 "permission-form","createParams","documentation",,,,
 "permission-form","removeCondition","documentation",,,,
 "permission-form","removeParams","documentation",,,,
-"user-form","name","documentation",,,,
-"user-form","group","documentation",,,,
-"user-form","code","documentation",,,,
-"user-form","password","documentation",,,,
-"user-form","blocked","documentation",,,,
-"user-form","activeFrom","documentation",,,,
-"user-form","activeTo","documentation",,,,
-"user-form","roles","documentation",,,,
+"permission-form","exportCondition","documentation",,,,
+"permission-form","expoParams","documentation",,,,
