--- a/axelor-meta/src/main/resources/i18n/fr.csv
+++ b/axelor-meta/src/main/resources/i18n/fr.csv
@@ -335,90 +335,18 @@
 "axelor-meta",,"other","Please enter your export path fisrt.","Merci de renseigner un chemin d'export.",,
 "axelor-meta",,"other","Please enter your import path fisrt.","Merci de renseigner un chemin d'import.",,
 "axelor-meta",,"other","Please select an import type first.","Merci de renseigner un type d'import.",,
-,"key","documentation",,,,
-,"groupBy","documentation",,,,
-,"aggregate","documentation",,,,
-,"type","documentation",,,,
-,"side","documentation",,,,
-,"title","documentation",,,,
-,"value","documentation",,,,
-,"order","documentation",,,,
-"meta-model-form","packageName","documentation",,,,
-"meta-model-form","name","documentation",,,,
-"meta-model-form","tableName","documentation",,,,
-"meta-model-form","metaFields","documentation",,,,
-"meta-translations-form","key","documentation",,,,
-"meta-translations-form","language","documentation",,,,
-"meta-translations-form","translation","documentation",,,,
-"meta-translations-form","domain","documentation",,,,
-"meta-translations-form","type","documentation",,,,
-"meta-translations-form","restoreAll","documentation",,,,
-"meta-translations-form","export","documentation",,,,
-"meta-translations-form","exportLanguage","documentation",,,,
-"meta-translations-form","exportPath","documentation",,,,
-"meta-translations-form","lauchExport","documentation",,,,
-"meta-translations-form","importType","documentation",,,,
-"meta-translations-form","importPath","documentation",,,,
-"meta-translations-form","lauchImport","documentation",,,,
-"meta-action-form","name","documentation",,,,
-"meta-action-form","type","documentation",,,,
-"meta-action-form","model","documentation",,,,
-"meta-action-form","module","documentation",,,,
-"meta-action-form","xml","documentation",,,,
-"meta-menu-form","name","documentation",,,,
-"meta-menu-form","parent","documentation",,,,
-"meta-menu-form","title","documentation",,,,
-"meta-menu-form","icon","documentation",,,,
-"meta-menu-form","action","documentation",,,,
-"meta-menu-form","top","documentation",,,,
-"meta-menu-form","module","documentation",,,,
-"meta-menu-form","left","documentation",,,,
-"meta-menu-form","priority","documentation",,,,
-"meta-menu-form","mobile","documentation",,,,
-"meta-menu-form","groups","documentation",,,,
-"meta-user-form","user","documentation",,,,
-"meta-user-form","email","documentation",,,,
-"meta-user-form","language","documentation",,,,
-"meta-user-form","action","documentation",,,,
-"meta-chart-form","name","documentation",,,,
-"meta-chart-form","title","documentation",,,,
-"meta-chart-form","stacked","documentation",,,,
-"meta-chart-form","categoryKey","documentation",,,,
-"meta-chart-form","categoryType","documentation",,,,
-"meta-chart-form","categoryTitle","documentation",,,,
-"meta-chart-form","module","documentation",,,,
-"meta-chart-form","queryType","documentation",,,,
-"meta-chart-form","query","documentation",,,,
-"meta-chart-form","chartSeries","documentation",,,,
-"meta-chart-form","chartConfig","documentation",,,,
-"meta-view-form","name","documentation",,,,
-"meta-view-form","priority","documentation",,,,
-"meta-view-form","title","documentation",,,,
-"meta-view-form","type","documentation",,,,
-"meta-view-form","model","documentation",,,,
-"meta-view-form","module","documentation",,,,
-"meta-view-form","groups","documentation",,,,
-"meta-view-form","validate","documentation",,,,
-"meta-view-form","restore","documentation",,,,
-"meta-view-form","restoreAll","documentation",,,,
-"meta-view-form","preview","documentation",,,,
-"meta-view-form","xml","documentation",,,,
-"meta-module-form","title","documentation",,,,
-"meta-module-form","name","documentation",,,,
-"meta-module-form","moduleVersion","documentation",,,,
-"meta-module-form","depends","documentation",,,,
-"meta-module-form","installed","documentation",,,,
-"meta-module-form","btnInstall","documentation",,,,
-"meta-module-form","btnUninstall","documentation",,,,
-"meta-module-form","description","documentation",,,,
-"meta-field-form","name","documentation",,,,
-"meta-field-form","packageName","documentation",,,,
-"meta-field-form","typeName","documentation",,,,
-"meta-field-form","label","documentation",,,,
-"meta-field-form","relationship","documentation",,,,
-"meta-field-form","mappedBy","documentation",,,,
-"meta-field-form","openModel","documentation",,,,
-"meta-field-form","description","documentation",,,,
+"auth.profiles","auth.profiles","documentation",,,,
+"user.preferences","user.preferences","documentation",,,,
+"action-meta-model-views","action-meta-model-views","documentation",,,,
+"action-meta-views","action-meta-views","documentation",,,,
+"action-meta-menus","action-meta-menus","documentation",,,,
+"action-meta-actions","action-meta-actions","documentation",,,,
+"action-meta-select","action-meta-select","documentation",,,,
+"action-meta-action-menus","action-meta-action-menus","documentation",,,,
+"action-meta-translations","action-meta-translations","documentation",,,,
+"meta.charts","meta.charts","documentation",,,,
+"meta.modules","meta.modules","documentation",,,,
+"meta-auth-profile-form","meta-auth-profile-form","documentation",,,,
 "meta-auth-profile-form","generate","documentation",,,,
 "meta-auth-profile-form","showPermissions","documentation",,,,
 "meta-auth-profile-form","name","documentation",,,,
@@ -438,13 +366,108 @@
 "meta-auth-profile-form","createParams","documentation",,,,
 "meta-auth-profile-form","removeCondition","documentation",,,,
 "meta-auth-profile-form","removeParams","documentation",,,,
+"meta-user-form","meta-user-form","documentation",,,,
+"meta-user-form","user","documentation",,,,
+"meta-user-form","email","documentation",,,,
+"meta-user-form","language","documentation",,,,
+"meta-user-form","action","documentation",,,,
+"meta-model-form","meta-model-form","documentation",,,,
+"meta-model-form","packageName","documentation",,,,
+"meta-model-form","name","documentation",,,,
+"meta-model-form","tableName","documentation",,,,
+"meta-model-form","metaFields","documentation",,,,
+"meta-field-form","meta-field-form","documentation",,,,
+"meta-field-form","name","documentation",,,,
+"meta-field-form","packageName","documentation",,,,
+"meta-field-form","typeName","documentation",,,,
+"meta-field-form","label","documentation",,,,
+"meta-field-form","relationship","documentation",,,,
+"meta-field-form","mappedBy","documentation",,,,
+"meta-field-form","openModel","documentation",,,,
+"meta-field-form","description","documentation",,,,
+"meta-view-form","meta-view-form","documentation",,,,
+"meta-view-form","name","documentation",,,,
+"meta-view-form","priority","documentation",,,,
+"meta-view-form","title","documentation",,,,
+"meta-view-form","type","documentation",,,,
+"meta-view-form","model","documentation",,,,
+"meta-view-form","module","documentation",,,,
+"meta-view-form","groups","documentation",,,,
+"meta-view-form","validate","documentation",,,,
+"meta-view-form","restore","documentation",,,,
+"meta-view-form","restoreAll","documentation",,,,
+"meta-view-form","preview","documentation",,,,
+"meta-view-form","xml","documentation",,,,
+"meta-menu-form","meta-menu-form","documentation",,,,
+"meta-menu-form","name","documentation",,,,
+"meta-menu-form","parent","documentation",,,,
+"meta-menu-form","title","documentation",,,,
+"meta-menu-form","icon","documentation",,,,
+"meta-menu-form","action","documentation",,,,
+"meta-menu-form","top","documentation",,,,
+"meta-menu-form","module","documentation",,,,
+"meta-menu-form","left","documentation",,,,
+"meta-menu-form","priority","documentation",,,,
+"meta-menu-form","mobile","documentation",,,,
+"meta-menu-form","groups","documentation",,,,
+"meta-action-form","meta-action-form","documentation",,,,
+"meta-action-form","name","documentation",,,,
+"meta-action-form","type","documentation",,,,
+"meta-action-form","model","documentation",,,,
+"meta-action-form","module","documentation",,,,
+"meta-action-form","xml","documentation",,,,
+"meta-select-form","meta-select-form","documentation",,,,
 "meta-select-form","name","documentation",,,,
 "meta-select-form","priority","documentation",,,,
 "meta-select-form","module","documentation",,,,
 "meta-select-form","items","documentation",,,,
+"meta-select-form","title","documentation",,,,
+"meta-select-form","value","documentation",,,,
+"meta-select-form","order","documentation",,,"Sequence order",
+"meta-action-menu-form","meta-action-menu-form","documentation",,,,
 "meta-action-menu-form","name","documentation",,,,
 "meta-action-menu-form","title","documentation",,,,
 "meta-action-menu-form","parent","documentation",,,,
-"meta-action-menu-form","category","documentation",,,,
+"meta-action-menu-form","category","documentation",,,,"Nom de la catégorie pour grouper les actions menus"
 "meta-action-menu-form","action","documentation",,,,
 "meta-action-menu-form","module","documentation",,,,
+"meta-translations-form","meta-translations-form","documentation",,,,
+"meta-translations-form","key","documentation",,,,
+"meta-translations-form","language","documentation",,,,
+"meta-translations-form","translation","documentation",,,,
+"meta-translations-form","domain","documentation",,,,
+"meta-translations-form","type","documentation",,,,
+"meta-translations-form","restoreAll","documentation",,,,
+"meta-translations-form","export","documentation",,,,
+"meta-translations-form","exportLanguage","documentation",,,,
+"meta-translations-form","exportPath","documentation",,,,
+"meta-translations-form","lauchExport","documentation",,,,
+"meta-translations-form","importType","documentation",,,,
+"meta-translations-form","importPath","documentation",,,,
+"meta-translations-form","lauchImport","documentation",,,,
+"meta-chart-form","meta-chart-form","documentation",,,,
+"meta-chart-form","name","documentation",,,,
+"meta-chart-form","title","documentation",,,,
+"meta-chart-form","stacked","documentation",,,,
+"meta-chart-form","categoryKey","documentation",,,,
+"meta-chart-form","categoryType","documentation",,,,
+"meta-chart-form","categoryTitle","documentation",,,,
+"meta-chart-form","module","documentation",,,,
+"meta-chart-form","queryType","documentation",,,,
+"meta-chart-form","query","documentation",,,,
+"meta-chart-form","chartSeries","documentation",,,,
+"meta-chart-form","key","documentation",,,,
+"meta-chart-form","groupBy","documentation",,,,
+"meta-chart-form","aggregate","documentation",,,,
+"meta-chart-form","type","documentation",,,,
+"meta-chart-form","side","documentation",,,,
+"meta-chart-form","chartConfig","documentation",,,,
+"meta-module-form","meta-module-form","documentation",,,,
+"meta-module-form","title","documentation",,,,
+"meta-module-form","name","documentation",,,,
+"meta-module-form","moduleVersion","documentation",,,,
+"meta-module-form","depends","documentation",,,,
+"meta-module-form","installed","documentation",,,,
+"meta-module-form","btnInstall","documentation",,,,
+"meta-module-form","btnUninstall","documentation",,,,
+"meta-module-form","description","documentation",,,,
